<resources>
    <string name="app_name">My Learning</string>
    <string name="note_name">Notepad</string>
    <string name="btnTextQuiz">My Quiz</string>
    <string name="btnTextNote">My Note</string>
    <string name="btnTextNews">My News</string>
    <string name="txtScore">Score: 0</string>
    <string name="txtQuestionCount">Question:</string>
    <string name="txtTimer">00:30</string>
    <string name="txtOption1">Option 1</string>
    <string name="txtOption2">Option 2</string>
    <string name="txtOption3">Option 3</string>
    <string name="txtOption4">Option 4</string>
    <string name="txtQuestion">This is a sample question.</string>
    <string name="txtConfirm">Confirm</string>
    <string name="txtQuizCatalogue">Quiz Catalogue</string>
    <string name="txtStartQuiz">Start Quiz</string>
    <string name="txtTrue">True</string>
    <string name="txtFalse">False</string>
    <string name="txtTypeYourAnswerHere">Type your answer here</string>
    <string name="txtDifficulty">Difficulty:</string>
    <string name="txtTopic">Topic:</string>
    <string name="txtTopicDifficulty">Topic (Difficulty)</string>
    <string name="txtCategory">Type:</string>
    <string-array name="news_api_key">
        <item>a14bed07842f4eb6b798ce3643a31077</item>
        <item>a412090be15d4a6590616da1c618926a</item>
        <item>92388440e04e493ba423e20051f76681</item>
    </string-array>
    <string name="txtNewsImage">News Image</string>
    <string name="txtSearchNews">Search for news in all sources...</string>
    <string name="txtAll">All</string>
    <string name="txtArsTechnica">Ars Technica</string>
    <string name="txtEngadget">Engadget</string>
    <string name="txtHackerNews">Hacker News</string>
    <string name="txtTechCrunch">TechCrunch</string>
    <string name="txtTechRadar">TechRadar</string>
    <string name="txtTheNextWeb">The Next Web</string>
    <string name="txtTheVerge">The Verge</string>
    <string name="txtVox">Vox</string>
    <string name="txtWired">Wired</string>
    <string name="txtQueryHint">Search by title, content, date or time</string>
    <string name="textViewTxtSortBy">Sort by:</string>
    <string name="buttonTxtConfirm">Confirm</string>
    <string name="buttonTextCancel">Cancel</string>
    <string name="radioButtonTxtAtoZ">Title: A - Z</string>
    <string name="radioButtonTxtZtoA">Title: Z - A</string>
    <string name="radioButtonTxtModifiedTimeNewestToOldest">Modified time: Newest - Oldest</string>
    <string name="radioButtonTxtModifiedTimeoOldestToNewes">Modified time: Oldest - Newest</string>
    <string name="textViewTextSignIn">Google Sign-in</string>
    <string name="buttonTxtSignIn">Sign-in</string>
    <string name="txtSignOut">Sign-out</string>
</resources>