<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    >

    <TextView
        android:id="@+id/textViewSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textViewTxtSortBy"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:text="@string/buttonTxtConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:text="@string/buttonTextCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSortOption"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:checkedButton="@id/radioButtonModifiedTimeNewestToOldest"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy"
        app:layout_constraintVertical_bias="0.48000002">

        <RadioButton
            android:id="@+id/radioButtonModifiedTimeNewestToOldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonTxtModifiedTimeNewestToOldest"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonModifiedTimeoOldestToNewes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonTxtModifiedTimeoOldestToNewes"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonAtoZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonTxtAtoZ"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonZtoA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonTxtZtoA"
            android:textSize="18sp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>